<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.plugin.PreventModeView android:id="@id/prevent_mode_view" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/pevent_mode_background" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <View android:background="#99000000" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/prevent_view_title_size" android:textColor="#ffffffff" android:id="@id/prevent_view_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="338.0px" android:text="@string/prevent_view_title" android:layout_centerHorizontal="true" style="?android:attr/textAppearanceMedium" />
        <ImageView android:id="@id/prevent_mode_phone" android:layout_width="311.0px" android:layout_height="623.0px" android:layout_marginTop="156.0px" android:src="@drawable/prevent_mode_phone" android:layout_below="@id/prevent_view_title" android:layout_centerHorizontal="true" />
        <TextView android:textSize="@dimen/prevent_view_title_cancel_size" android:textColor="#ccffffff" android:id="@id/prevent_view_title_cancel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="83.0px" android:text="@string/prevent_view_title_cancel" android:layout_below="@id/prevent_mode_phone" android:layout_marginStart="32.0dip" android:layout_marginEnd="32.0dip" style="?android:attr/textAppearanceMedium" />
        <LinearLayout android:orientation="horizontal" android:id="@id/prevent_view_top_tag_view1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="31.199982px" android:layout_below="@id/prevent_view_title_cancel" android:layout_alignStart="@id/prevent_view_title_cancel" android:layout_alignEnd="@id/prevent_view_title_cancel">
            <TextView android:textSize="@dimen/prevent_view_top_tag_cancel_size" android:textColor="#99ffffff" android:id="@id/prevent_view_top_tag_number1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prevent_view_top_tag_numbuer1" style="?android:attr/textAppearanceLarge" />
            <TextView android:textSize="@dimen/prevent_view_top_tag_cancel_size" android:textColor="#99ffffff" android:id="@id/prevent_view_top_tag_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prevent_view_top_tag_cancel" style="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@id/prevent_view_top_tag_view2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="21.0px" android:layout_below="@id/prevent_view_top_tag_view1" android:layout_alignStart="@id/prevent_view_title_cancel" android:layout_alignEnd="@id/prevent_view_title_cancel">
            <TextView android:textSize="@dimen/prevent_view_top_tag_cancel2_size" android:textColor="#99ffffff" android:id="@id/prevent_view_top_tag_number2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prevent_view_top_tag_numbuer2" style="?android:attr/textAppearanceLarge" />
            <TextView android:textSize="@dimen/prevent_view_top_tag_cancel2_size" android:textColor="#99ffffff" android:id="@id/prevent_view_top_tag_cancel2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prevent_view_top_tag_cancel2" style="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </RelativeLayout>
    <com.android.systemui.plugin.RippleView android:id="@id/rippleview_first" android:layout_width="wrap_content" android:layout_height="wrap_content" />
</com.android.systemui.plugin.PreventModeView>